index adjusted name of image 3 to image-three css project two and three are aligned and fulfill requirements - note that on the left and right site there is too much space - to be solved

--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,10 @@ p {
     display: flex;
     flex-direction: row;
     align-items: center;
-    flex-basis: 360px;
+    flex-basis: 400px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin-bottom: 80px;
 
 }
 .first-article {
@@ -199,7 +202,58 @@ p {
     flex-shrink: 1;
 }
 
+.project-two  {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    flex-basis: 400px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin-bottom: 80px;
+}
 
+.second-article {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    flex-basis: 360px;
+    padding-right: 20px;
+    padding-left: 100px;
+    flex-grow: 0;
+    flex-shrink: 1;
+}
+
+.image-two{
+    width: 100%;
+}
+
+.project-three {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-basis: 360px;
+}
+
+.third-article {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    flex-basis: 360px;
+    padding-right: 100px;
+    padding-left: 20px;
+    flex-grow: 0;
+    flex-shrink: 1;
+}
+
+.image-three{
+    width: 100%;
+}
+
+.work-desktop-one{
+    padding-bottom: 20px;
+}
 /*
 All colors used throughout the text
 Paars #5722CD;
